<resources>
    <string name="app_name">Never forget</string>
    <string name="add_reminder_header">Create a reminder</string>
    <string name="add_reminder_title">Reminder\'s title:</string>
    <string name="add_reminder_text">Reminder\'s text:</string>
    <string name="add_reminder_create">Create</string>
    <string name="add_reminder_ticker">Remember!</string>
    <string name="add_reminder_db_error">Unable to save notification</string>
    <string name="add_reminder_empty_title">Title cannot be empty</string>

    <string name="cancel_notification_not_found">Reminder could not be found</string>
    <string name="cancel_notification_db_error">Unable to remove reminders</string>
    <string name="cancel_notification_confirm">Do you want to dismiss the reminder?</string>
    <string name="cancel_notification_ok">OK</string>
    <string name="cancel_notification_cancel">Cancel</string>

    <string name="application_cannot_load">Unable to load notifications from db</string>
    <string name="icon_link">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons BY 3.0</a></string>
</resources>