<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".AddReminderActivity">

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="#FFCCCCCC">

                <TextView
                    android:id="@+id/add_reminder_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="fill_vertical|center_horizontal"
                    android:text="@string/add_reminder_header"
                    android:textColor="#452222"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
            </GridLayout>

            <TextView
                android:id="@+id/add_reminder_title_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="70dp"
                android:text="@string/add_reminder_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF525151"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/add_reminder_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/add_reminder_title_message"
                android:maxLength="16"
                android:inputType="text"/>

            <TextView
                android:id="@+id/add_reminder_text_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/add_reminder_title"
                android:layout_marginTop="40dp"
                android:text="@string/add_reminder_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF525151"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/add_reminder_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/add_reminder_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/add_reminder_title"
                android:layout_below="@+id/add_reminder_text_message"
                android:ems="10"
                android:inputType="textMultiLine"/>

            <Button
                android:id="@+id/add_reminder_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_reminder_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="54dp"
                android:text="@string/add_reminder_create"
                android:textColor="#452222"
                android:textStyle="bold"/>

        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/icons_made_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autoLink="web"
        android:text="@string/icon_link"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
</LinearLayout>